# Kartex.Logging.Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  test_client.py
.github/workflows/: release.yml
dotnet-client/Kartex.Serilog.TestClient/: Kartex.Serilog.TestClient.csproj  KartexUdpSink.cs  Program.cs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
samples/dotnet-otel-test/: Dockerfile  DotnetOtelTest.csproj  Program.cs  README.md
src/: config.rs  main.rs
src/api/: auth.rs  handlers.rs  mod.rs
src/db/: batcher.rs  dashboard.rs  mod.rs  models.rs  repository.rs
src/gelf/: mod.rs  parser.rs  server.rs
src/notifications/: channels.rs  mod.rs  sender.rs
src/otlp/: converter.rs  grpc_server.rs  http_handlers.rs  mod.rs  models.rs  repository.rs
src/realtime/: alerts.rs  metrics.rs  mod.rs  websocket.rs
src/syslog/: mod.rs  models.rs  parser.rs  tcp_server.rs  udp_server.rs
src/udp/: auth.rs  mod.rs  parser.rs
static/: app.js  index.html  styles.css
static/assets/: index-0CJGPIYD.js  index-1gnrTR9Y.css  index-B1uucGqU.js  index-B4Q2-ABL.js  index-BIWZ8PhR.js  index-BTj-A3Bh.css  index-C-iF5UdS.css  index-C3QacsPm.js  index-CD_-uhGn.js  index-CNOyueyU.js  index-D3JDjdmH.css  index-DCf40w0B.css  index-DS6t8h1E.js  index-DtFLo8h-.css  index-Dwr200B6.css  index-FlgkLT9R.css  index-HOR6fnkJ.js  index-fWpmTbof.js  index-thJT9y2S.js  index-u2hlghVd.css  index-u6HP09sA.js  index-yWVfVuD6.js
static/plugins/: example-service-map.js
(+37 files in other folders)
