[package]
name = "kartex-logging-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
mongodb = "3.1"
bson = { version = "2.13", features = ["chrono-0_4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
time = "=0.3.36"
chrono = { version = "0.4", features = ["serde"] }

# Authentication
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# TLS
rustls = "0.23"
rustls-pemfile = "2.2"

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
futures = "0.3"

# WebSocket support
axum-extra = { version = "0.9", features = ["typed-header"] }

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# OpenTelemetry OTLP support
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "logs", "trace"] }
bytes = "1.7"
